<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC"
    android:orientation="vertical">
    <EditText
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/soyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:importantForAutofill="no" tools:targetApi="o" />
    <EditText
        android:id="@+id/eposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/eposta"
        android:autofillHints=""
        android:importantForAutofill="no" tools:targetApi="o" />
    <EditText
        android:id="@+id/unvan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/unvan"
        android:importantForAutofill="no"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/birim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/birim"
        android:importantForAutofill="no"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/odanumarasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/odanumarasi"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/katnumarasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/katnumarasi"
        android:importantForAutofill="no" tools:targetApi="o" />

    <Button
        android:id="@+id/btnekle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnekle" />

</LinearLayout>