<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFE6"
    tools:context=".TalepOlusturActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/adiniz"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/soyadiniz"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType=""
        android:importantForAutofill="no"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="start"
        android:hint="@string/aciklama"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/gönder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gonder"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#76A476"
        android:textColor="#FFFFFF" />

</LinearLayout>