<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8DC">
    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="262dp"
        android:ems="10"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:background="@drawable/btn_giris_style"
        android:text="@string/giris" />

</RelativeLayout>
